endpoints authentication